--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.edsonboldrini.flutter_getnet_pos_example">
-   <application
+    <uses-permission android:name="com.getnet.posdigital.service.POSDIGITAL" />
+    <application
         android:label="flutter_getnet_pos_example"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
