--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -56,6 +56,7 @@ android {
     dependencies {
         implementation project(':flutter_getnet_pos');
     }
+    namespace 'com.edsonboldrini.flutter_getnet_pos_example'
 }
 
 flutter {
