--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.edsonboldrini.flutter_getnet_pos_example">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="com.getnet.posdigital.service.POSDIGITAL" />
     <application
         android:label="flutter_getnet_pos_example"
